page about (1st stage)

--- a/about.html
+++ b/about.html
@@ -19,6 +19,63 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
+
+    <div class="about-brand">
+        <h1>About Brand</h1>
+        <div class="brand-story">
+            <h2><span>Brand</span> Story</h2>
+            <div class="brand-story-content">
+                <img src="Images/brand(2).png" alt="brand-name">
+                <p>ReShoes was born out of our concern for waste and our commitment to creating environmentally friendly fashion. Here, we utilize recycled materials such as plastic, paper, cardboard, and more to produce high-quality shoes that are both stylish and durable. Every product from ReShoes is a fusion of innovative design, dedicated to reducing the negative impact of the fashion industry on the environment. By transforming waste into valuable products, we strive to inspire people to support a more sustainable and eco-friendly lifestyle.</p>
+            </div>
+        </div>
+
+        <div class="vm">
+            <div class="vision">
+                <h2>Vision</h2>
+                <p>Becoming a part of the fashion industry in Indonesia by transforming waste into high-quality, environmentally friendly shoes, while also inspiring the global community, especially in Indonesia, to contribute to the preservation of our planet.</p>
+            </div>
+            
+            <div class="mission">
+                <h2>Mission</h2>
+                <ul>
+                    <li>Reducing the impact of waste and other recycled materials by managing them into shoes</li>
+                    <li>Educating the public about the importance of choosing environmentally friendly fashion</li>
+                    <li>Developing new innovations in domestic shoe design that combine modern style with recycled materials</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="about-team">
+        <h1>About Team</h1>
+        <div class="meet-the-team">
+            <h2><span class="green">Meet</span> the <span class="brown">Team</span></h2>
+            <div class="profiles-container">
+                <div class="profile">
+                    <img src="Images/melvyn-bw-crop.jpg" alt="melvyn-profile">
+                    <h3>Melvyn Benaya Wijaya</h3>
+                    <p>Saya merupakan seorang mahasiswa aktif Universitas Tarumanagara yang mengambil jurusan Teknik Informatika. Selain
+                    mempelajari bidang teknologi, saya memiliki minat khusus terhadap isu-isu lingkungan, terutama dalam pengelolaan limbah
+                    elektronik.</p>
+                </div>
+
+                <div class="profile">
+                    <img src="Images/greg-bw-crop.jpg" alt="greg-profile">
+                    <h3>Gregorius Nathanyel Benedict</h3>
+                    <p>Saya merupakan seorang mahasiswa aktif Universitas Tarumanagara yang mengambil jurusan Teknik Informatika. Saya tertarik untuk mengeksplorasi inovasi di bidang teknologi yang dapat membantu pengolahan limbah plastik menjadi produk yang lebih ramah lingkungan, dan juga mengingatkan kepada masyarakat agar memakai barang daur ulang.</p>
+                </div>
+
+                <div class="profile">
+                    <img src="Images/ryan-bw-crop.jpg" alt="ryan-profile">
+                    <h3>Ryan Hermanto</h3>
+                    <p>Saya merupakan seorang mahasiswa aktif Universitas Tarumanagara yang mengambil jurusan Teknik Informatika. Saya memiliki ketertarikan pada energi terbarukan dan bagaimana teknologi dapat mendukung transisi kita dari energi fosil ke energi yang lebih ramah lingkungan, seperti tenaga surya dan angin. </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
