--- a/about.html
+++ b/about.html
@@ -14,7 +14,14 @@
 
         <ul class="nav-link">
             <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
+            <li>
+                <a href="shop.html">Shop</a>
+                <ul class="dropdown">
+                    <li><a href="shop-men.html">Men</a></li>
+                    <li><a href="shop-women.html">Women</a></li>
+                    <li><a href="shop-kids.html">Kids</a></li>
+                </ul>
+            </li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
