--- a/shop-men.html
+++ b/shop-men.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReShoes - Contact Us</title>
+    <title>ReShoes - Shop</title>
     <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
