--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReShoes - Home</title>
-    <link rel="stylesheet" href="styles.css">
-    
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+    <header>
     <nav>
         <p class="name-logo"><span>Re</span>Shoes</p>
-            
         <ul class="nav-link">
             <li><a href="index.html">Home</a></li>
             <li>
@@ -25,5 +25,42 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
+    <div class="body">
+        <div class="deskripsi-produk">
+            <h3>$118,46</h3>
+            <h2>ReShoes Air Max 200 GO</h2>
+            <div class="rating">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i> 
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-regular fa-star"></i>
+            </div>
+            <p>The ReShoes Air Max 200 GO combines comfort with style and eco friendly. It's the perfect sneaker for any occasion and for making a world without waste.</p>
+        </div>
+
+        <div class="img">
+            <img src="Images/ReShoes-removebg-preview-double-removebg-preview.png" alt="recycleshoes">
+        </div>
+    </div>
+
+    <footer>
+        <div class="sosial">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 ReShoes. All Rights Reserved.</p>
+        </div>
+        <div class="footer-links">
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="shop.html">Shop</a>
+            <a href="index.html">Home</a>
+        </div>
+    </footer>
+   </header> 
+   <script src="script.js"></script>
 </body>
 </html>
