--- a/index.html
+++ b/index.html
@@ -9,41 +9,95 @@
 </head>
 <body>
     <header>
-    <nav>
-        <p class="name-logo"><span>Re</span>Shoes</p>
-        <ul class="nav-link">
-            <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="shop.html">Shop</a>
-                <ul class="dropdown">
-                    <li><a href="shop-men.html">Men</a></li>
-                    <li><a href="shop-women.html">Women</a></li>
-                    <li><a href="shop-kids.html">Kids</a></li>
-                </ul>
-            </li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
-    <div class="body">
-        <div class="deskripsi-produk">
-            <h3>$118,46</h3>
-            <h2>ReShoes Air Max 200 GO</h2>
-            <div class="rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i> 
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-regular fa-star"></i>
+        <nav>
+            <p class="name-logo"><span>Re</span>Shoes</p>
+            <ul class="nav-link">
+                <li><a href="index.html">Home</a></li>
+                <li>
+                    <a href="shop.html">Shop</a>
+                    <ul class="dropdown">
+                        <li><a href="shop-men.html">Men</a></li>
+                        <li><a href="shop-women.html">Women</a></li>
+                        <li><a href="shop-kids.html">Kids</a></li>
+                    </ul>
+                </li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <div class="body">
+            <div class="deskripsi-produk">
+                <h3>$118,46</h3>
+                <h2>ReShoes Air Max 200 GO</h2>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i> 
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <p>The ReShoes Air Max 200 GO combines comfort with style and <span>ECO FRIENDLY</span>. It's the perfect sneaker for any occasion and for making a world without waste.</p>
             </div>
-            <p>The ReShoes Air Max 200 GO combines comfort with style and eco friendly. It's the perfect sneaker for any occasion and for making a world without waste.</p>
+            <div class="img">
+                <img src="Images/ReShoes-removebg-preview-double-removebg-preview.png" alt="recycleshoes">
+            </div>
         </div>
-
-        <div class="img">
-            <img src="Images/ReShoes-removebg-preview-double-removebg-preview.png" alt="recycleshoes">
-        </div>
+    </header>
+    <div class="Text">
+        <p>JOIN FOR BETTER WORLD</p>
     </div>
-
+    <div class="container">
+        <div class="slide">
+            <div class="item" style="background-image: url(Images/world-environment-day-preservati-20230523081832.jpg);">
+                <div class="content">
+                    <div class="name"></div>
+                    <div class="des"></div>
+                    <button>See More</button>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(Images/eco.png);">
+                <div class="content">
+                    <div class="name"></div>
+                    <div class="des"></div>
+                    <button>See More</button>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(Images/OIP.png);">
+                <div class="content">
+                    <div class="name"></div>
+                    <div class="des"></div>
+                    <button>See More</button>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(Images/EcoFriendlySneakersfromAllbirds.png);">
+                <div class="content">
+                    <div class="name"></div>
+                    <div class="des"></div>
+                    <button>See More</button>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(Images/brand\(2\).png);">
+                <div class="content">
+                    <div class="name">Why Us</div>
+                    <div class="des">We support to making a brand that a eco freindly and belive its we can make world better</div>
+                    <button>See More</button>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(Images/garbage.jpg);">
+                <div class="content">
+                    <div class="name"></div>
+                    <div class="des"></div>
+                    <button>See More</button>
+                </div>
+            </div>
+        </div>
+        <div class="button">
+            <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
+            <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        
+    </div>
+    
     <footer>
         <div class="sosial">
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
@@ -60,7 +114,7 @@
             <a href="index.html">Home</a>
         </div>
     </footer>
-   </header> 
-   <script src="script.js"></script>
+
+    <script src="index.js"></script>
 </body>
 </html>
