Project structure changed - Changed folder structure - Added shop page - Added placeholder item page - Added renderItems.js - Added products.json

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -5,34 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReShoes - About Us</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
+    
 </head>
 
 <body>
-    <nav>
-        <p class="name-logo"><span>Re</span>Shoes</p>
-
-        <ul class="nav-link">
-            <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="shop.html">Shop</a>
-                <ul class="dropdown">
-                    <li><a href="shop-men.html">Men</a></li>
-                    <li><a href="shop-women.html">Women</a></li>
-                    <li><a href="shop-kids.html">Kids</a></li>
-                </ul>
-            </li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <p class="name-logo"><span>Re</span>Shoes</p>
+    
+            <ul class="nav-link">
+                <li><a href="index.html">Home</a></li>
+                <li>
+                    <a href="shop.html">Shop</a>
+                    <ul class="dropdown">
+                        <li><a href="shop-men.html">Men</a></li>
+                        <li><a href="shop-women.html">Women</a></li>
+                        <li><a href="shop-kids.html">Kids</a></li>
+                    </ul>
+                </li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="about-brand">
         <h1>About Brand</h1>
         <div class="brand-story">
             <h2><span>Brand</span> Story</h2>
             <div class="brand-story-content">
-                <img src="Images/brand(2).png" alt="brand-name">
+                <img src="../Assets/Images/brand(2).png" alt="brand-name">
                 <p>ReShoes was born out of our concern for waste and our commitment to creating environmentally friendly fashion. Here, we utilize recycled materials such as plastic, paper, cardboard, and more to produce high-quality shoes that are both stylish and durable. Every product from ReShoes is a fusion of innovative design, dedicated to reducing the negative impact of the fashion industry on the environment. By transforming waste into valuable products, we strive to inspire people to support a more sustainable and eco-friendly lifestyle.</p>
             </div>
         </div>
@@ -61,7 +64,7 @@
             <h2><span class="green">Meet</span> the <span class="brown">Team</span></h2>
             <div class="profiles-container">
                 <div class="profile">
-                    <img src="Images/melvyn-bw-crop.jpg" alt="melvyn-profile">
+                    <img src="../Assets/Images/melvyn-bw-crop.jpg" alt="melvyn-profile">
                     <h3>Melvyn Benaya Wijaya</h3>
                     <p>Saya merupakan seorang mahasiswa aktif Universitas Tarumanagara yang mengambil jurusan Teknik Informatika. Selain
                     mempelajari bidang teknologi, saya memiliki minat khusus terhadap isu-isu lingkungan, terutama dalam pengelolaan limbah
@@ -69,13 +72,13 @@
                 </div>
 
                 <div class="profile">
-                    <img src="Images/greg-bw-crop.jpg" alt="greg-profile">
+                    <img src="../Assets/Images/greg-bw-crop.jpg" alt="greg-profile">
                     <h3>Gregorius Nathanyel Benedict</h3>
                     <p>Saya merupakan seorang mahasiswa aktif Universitas Tarumanagara yang mengambil jurusan Teknik Informatika. Saya tertarik untuk mengeksplorasi inovasi di bidang teknologi yang dapat membantu pengolahan limbah plastik menjadi produk yang lebih ramah lingkungan, dan juga mengingatkan kepada masyarakat agar memakai barang daur ulang.</p>
                 </div>
 
                 <div class="profile">
-                    <img src="Images/ryan-bw-crop.jpg" alt="ryan-profile">
+                    <img src="../Assets/Images/ryan-bw-crop.jpg" alt="ryan-profile">
                     <h3>Ryan Hermanto</h3>
                     <p>Saya merupakan seorang mahasiswa aktif Universitas Tarumanagara yang mengambil jurusan Teknik Informatika. Saya memiliki ketertarikan pada energi terbarukan dan bagaimana teknologi dapat mendukung transisi kita dari energi fosil ke energi yang lebih ramah lingkungan, seperti tenaga surya dan angin. </p>
                 </div>
