--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReShoes - Home</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../CSS/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -39,7 +40,7 @@
                 <p>The ReShoes Air Max 200 GO combines comfort with style and <span>ECO FRIENDLY</span>. It's the perfect sneaker for any occasion and for making a world without waste.</p>
             </div>
             <div class="img">
-                <img src="Images/ReShoes-removebg-preview-double-removebg-preview.png" alt="recycleshoes">
+                <img src="../Assets/Images/ReShoes-removebg-preview-double-removebg-preview.png" alt="recycleshoes">
             </div>
         </div>
     </header>
@@ -48,42 +49,42 @@
     </div>
     <div class="container">
         <div class="slide">
-            <div class="item" style="background-image: url(Images/world-environment-day-preservati-20230523081832.jpg);">
+            <div class="item" style="background-image: url(../Assets/Images/world-environment-day-preservati-20230523081832.jpg);">
                 <div class="content">
                     <div class="name"></div>
                     <div class="des"></div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(Images/eco.png);">
+            <div class="item" style="background-image: url(../Assets/Images/eco.png);">
                 <div class="content">
                     <div class="name"></div>
                     <div class="des"></div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(Images/OIP.png);">
+            <div class="item" style="background-image: url(../Assets/Images/OIP.png);">
                 <div class="content">
                     <div class="name"></div>
                     <div class="des"></div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(Images/EcoFriendlySneakersfromAllbirds.png);">
+            <div class="item" style="background-image: url(../Assets/Images/EcoFriendlySneakersfromAllbirds.png);">
                 <div class="content">
                     <div class="name"></div>
                     <div class="des"></div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(Images/brand\(2\).png);">
+            <div class="item" style="background-image: url(../Assets/Images/brand\(2\).png);">
                 <div class="content">
                     <div class="name">Why Us</div>
                     <div class="des">We support to making a brand that a eco freindly and belive its we can make world better</div>
                     <button>See More</button>
                 </div>
             </div>
-            <div class="item" style="background-image: url(Images/garbage.jpg);">
+            <div class="item" style="background-image: url(../Assets/Images/garbage.jpg);">
                 <div class="content">
                     <div class="name"></div>
                     <div class="des"></div>
@@ -115,6 +116,6 @@
         </div>
     </footer>
 
-    <script src="index.js"></script>
+    <script src="../JS/index.js"></script>
 </body>
 </html>
