--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReShoes - Shop</title>
-    <link rel="stylesheet" href="styles.css">
-    
+    <link rel="stylesheet" href="../CSS/shop.css">
 </head>
-
 <body>
     <nav>
         <p class="name-logo"><span>Re</span>Shoes</p>
-
         <ul class="nav-link">
             <li><a href="index.html">Home</a></li>
             <li>
@@ -27,6 +23,17 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
+    <div class="pageTitle">
+        <h3>Our Products</h3>
+    </div>
+    <div class="product-list" id="productList">
+    </div>
+    <!-- pengaturan halaman-->
+    <div class="pagination" id="paginationControls">
+        <button id="prevPage" disabled>Previous</button>
+        <span id="pageNumber">Page 1</span>
+        <button id="nextPage">Next</button>
+    </div>
+    <script src="../JS/renderItems.js"></script>
 </body>
-
 </html>
