--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReShoes - Contact Us</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/contact.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="../JS/contact.js" defer></script>
 </head>
 
 <body>
@@ -26,6 +28,64 @@
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
+
+    <div class="cont-sec">
+        <div class="container">
+            <div class="left">
+                <h2><span class="green">Contact</span> <span class="brown">Us</span>!!!</h2>
+                <p>Just tell us if you need something :D</p>
+                <form action="#">
+                    <div class="input-box">
+                        <input type="text" name="name" class="name" placeholder="Enter your name!" />
+                        <div class="error"></div>
+                    </div>
+                    <div class="input-box">
+                        <input type="text" name="email" class="email" placeholder="Enter your email!" />
+                        <div class="error"></div>
+                    </div>
+                    <div class="input-box">
+                        <textarea name="message" class="message" placeholder="Enter your problem / message"></textarea>
+                        <div class="error"></div>
+                    </div>
+                    <button class="btn">SUBMIT</button>
+                </form>
+            </div>
+
+            <div class="right">
+                <div class="illust">
+                    <img src="../Assets/Images/people-recycling.png" alt="logo">
+                </div>
+                <div class="contact-info">
+                    <div class="info-content">
+                        <div class="icon">
+                            <a href="tel:+62812-1010-1010"><i class="fa-solid fa-phone"></i></a>
+                        </div>
+                        <div class="text">
+                            <p>+62812-1010-1010</p>
+                        </div>
+                    </div>
+                    <div class="info-content">
+                        <div class="icon">
+                            <a href="mailto:reshoes@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                        </div>
+                        <div class="text">
+                            <p>reshoes@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="info-content">
+                        <div class="icon">
+                            <i class="fa-solid fa-map"></i>
+                        </div>
+                        <div class="text">
+                            <p>Tarumanagara University</p>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
 </body>
 
 </html>
