Commit Penyelesain home dan juga detail-product page untuk setiap page (sudah 10 page yang jadi dari 20)

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,7 +35,7 @@
                     <i class="fa-solid fa-star"></i> 
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
                 </div>
                 <p>The ReShoes Air Max 200 GO combines comfort with style and <span>ECO FRIENDLY</span>. It's the perfect sneaker for any occasion and for making a world without waste.</p>
             </div>
@@ -51,29 +51,29 @@
         <div class="slide">
             <div class="item" style="background-image: url(../Assets/Images/world-environment-day-preservati-20230523081832.jpg);">
                 <div class="content">
-                    <div class="name"></div>
-                    <div class="des"></div>
+                    <div class="name">Make World Better</div>
+                    <div class="des">We have to make that earth can be lived any longer</div>
                     <button>See More</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(../Assets/Images/eco.png);">
                 <div class="content">
-                    <div class="name"></div>
-                    <div class="des"></div>
+                    <div class="name">Eco</div>
+                    <div class="des">We Using The material that eco freindly to support our earth to lived longer</div>
                     <button>See More</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(../Assets/Images/OIP.png);">
                 <div class="content">
-                    <div class="name"></div>
-                    <div class="des"></div>
+                    <div class="name">89% Material eco freindly</div>
+                    <div class="des">Our products are made with 89% eco-friendly materials to minimize our carbon footprint.</div>
                     <button>See More</button>
                 </div>
             </div>
             <div class="item" style="background-image: url(../Assets/Images/EcoFriendlySneakersfromAllbirds.png);">
                 <div class="content">
-                    <div class="name"></div>
-                    <div class="des"></div>
+                    <div class="name">Eco-Friendly Sneakers</div>
+                    <div class="des">Discover our range of sneakers designed with the environment in mind.</div>
                     <button>See More</button>
                 </div>
             </div>
@@ -86,8 +86,8 @@
             </div>
             <div class="item" style="background-image: url(../Assets/Images/garbage.jpg);">
                 <div class="content">
-                    <div class="name"></div>
-                    <div class="des"></div>
+                    <div class="name">Take Action</div>
+                    <div class="des">Join us in taking action against pollution and waste for a cleaner planet.</div>
                     <button>See More</button>
                 </div>
             </div>
