--- a/HTML/shop-kids.html
+++ b/HTML/shop-kids.html
@@ -77,7 +77,7 @@
         </div>
         
         <div class="product-item">
-            <a href="product20.html">
+            <a href="product/product20.html">
                 <img src="../Assets/Images/ShoeImages/recycled-shoe10.png" alt="Product 20">
                 <h3>ReShoes Jordan 4</h3>
                 <span class="price">$499</span>
