--- a/HTML/about.html
+++ b/HTML/about.html
@@ -7,6 +7,8 @@
     <title>ReShoes - About Us</title>
     <link rel="stylesheet" href="../CSS/about.css">
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js" defer></script> <!-- library typed dari cdn github-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="../JS/about.js" defer></script>
     
 </head>
@@ -110,6 +112,22 @@
         </div>
     </div>
 
+    <footer>
+        <div class="sosial">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 ReShoes. All Rights Reserved.</p>
+        </div>
+        <div class="footer-links">
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="shop.html">Shop</a>
+            <a href="index.html">Home</a>
+        </div>
+    </footer>
 </body>
 
 </html>
