Pembuatan halaman product-detail kepada seluruh product

--- a/HTML/product10.html
+++ b/HTML/product10.html
@@ -39,36 +39,36 @@
             <div class = "img-select">
               <div class = "img-item">
                 <a href = "product11.html" data-id = "11">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe11.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
                 <a href = "product12.html" data-id = "12">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe2.avif" alt = "shoe image">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe12.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
                 <a href = "product13.html" data-id = "13">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe3.avif" alt = "shoe image">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe13.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
                 <a href = "product14.html" data-id = "14">
-                  <img src ="../Assets/Images/ShoeImages/recycled-shoe4.avif" alt = "shoe image">
+                  <img src ="../Assets/Images/ShoeImages/recycled-shoe14.avif" alt = "shoe image">
                 </a>
               </div>
             </div>
           </div>
           <!-- card right -->
           <div class = "product-content">
-            <h2 class = "product-title">ReShoes OZWEEGO</h2>
+            <h2 class = "product-title">ReShoes jordan 4</h2>
             <div class = "product-rating">
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
-              <i class = "fas fa-star-half-alt"></i>
-              <span>4.8(15)</span>
+              <i class = "fas fa-star"></i>
+              <span>4.9(97)</span>
             </div>
   
             <div class = "product-price">
