--- a/HTML/product11.html
+++ b/HTML/product11.html
@@ -32,36 +32,36 @@
           <div class = "product-imgs">
             <div class = "img-display">
               <div class = "img-showcase">
-                <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                <img src = "../Assets/Images/ShoeImages/recycled-shoe11.avif" alt = "shoe image">
               </div>
             </div>
             <h2>Recommendations :</h2>
             <div class = "img-select">
               <div class = "img-item">
-                <a href = "product2.html" data-id = "2">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe2.avif" alt = "shoe image">
+                <a href = "product12.html" data-id = "12">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe12.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product3.html" data-id = "3">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe3.avif" alt = "shoe image">
+                <a href = "product13.html" data-id = "13">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe13.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product4.html" data-id = "4">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe4.avif" alt = "shoe image">
+                <a href = "product14.html" data-id = "14">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe14.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product5.html" data-id = "5">
-                  <img src ="../Assets/Images/ShoeImages/recycled-shoe5.png" alt = "shoe image">
+                <a href = "product15.html" data-id = "15">
+                  <img src ="../Assets/Images/ShoeImages/recycled-shoe15.avif" alt = "shoe image">
                 </a>
               </div>
             </div>
           </div>
           <!-- card right -->
           <div class = "product-content">
-            <h2 class = "product-title">ReShoes OZWEEGO</h2>
+            <h2 class = "product-title">ReShoes Lothrtex SPZL</h2>
             <div class = "product-rating">
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
@@ -77,9 +77,9 @@
   
             <div class = "product-detail">
               <h2>about this item: </h2>
-              <p>ReShoes OZWEEGO adalah inovasi terbaru dalam dunia sepatu yang menggabungkan gaya dan keberlanjutan. Dirancang dengan memperhatikan lingkungan, sepatu ini terbuat dari bahan-bahan daur ulang yang berkualitas tinggi, memberikan kontribusi positif terhadap pengurangan limbah plastik dan jejak karbon.</p> 
-              <p>Dengan desain yang modern dan nyaman, ReShoes OZWEEGO tidak hanya menawarkan penampilan yang trendi tetapi juga memberikan kenyamanan maksimal untuk aktivitas sehari-hari. Setiap pasang sepatu ini adalah pernyataan gaya yang ramah lingkungan.</p>
-                <li>Color: <span>Cream</span></li>
+              <p><strong>ReShoes Lothrtex SPZL</strong> adalah sepatu yang dirancang untuk memberikan keseimbangan antara gaya dan performa. Dengan bahan daur ulang yang berkualitas tinggi, sepatu ini mendukung gaya hidup berkelanjutan tanpa mengorbankan tampilan yang stylish.</p> 
+              <p>Desain yang unik dan inovatif memastikan bahwa ReShoes Lothrtex SPZL dapat digunakan di berbagai kesempatan, baik untuk aktivitas sehari-hari maupun acara formal. Setiap detailnya memberikan kenyamanan dan dukungan optimal.</p>
+                <li>Color: <span>Black Grey</span></li>
                 <li>Available: <span>in stock</span></li>
                 <li>Category: <span>Shoes Recyle</span></li>
                 <li>Shipping Area: <span>All over the world</span></li>
