--- a/HTML/product20.html
+++ b/HTML/product20.html
@@ -32,11 +32,16 @@
           <div class = "product-imgs">
             <div class = "img-display">
               <div class = "img-showcase">
-                <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                <img src = "../Assets/Images/ShoeImages/recycled-shoe20.avif" alt = "shoe image">
               </div>
             </div>
             <h2>Recommendations :</h2>
             <div class = "img-select">
+              <div class = "img-item">
+                <a href = "product1.html" data-id = "1">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                </a>
+              </div>
               <div class = "img-item">
                 <a href = "product2.html" data-id = "2">
                   <img src = "../Assets/Images/ShoeImages/recycled-shoe2.avif" alt = "shoe image">
@@ -49,26 +54,21 @@
               </div>
               <div class = "img-item">
                 <a href = "product4.html" data-id = "4">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe4.avif" alt = "shoe image">
-                </a>
-              </div>
-              <div class = "img-item">
-                <a href = "product5.html" data-id = "5">
-                  <img src ="../Assets/Images/ShoeImages/recycled-shoe5.png" alt = "shoe image">
+                  <img src ="../Assets/Images/ShoeImages/recycled-shoe4.avif" alt = "shoe image">
                 </a>
               </div>
             </div>
           </div>
           <!-- card right -->
           <div class = "product-content">
-            <h2 class = "product-title">ReShoes OZWEEGO</h2>
+            <h2 class = "product-title">ReShoes Adi2000</h2>
             <div class = "product-rating">
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star-half-alt"></i>
-              <span>4.8(15)</span>
+              <span>4.6(83)</span>
             </div>
   
             <div class = "product-price">
@@ -77,9 +77,9 @@
   
             <div class = "product-detail">
               <h2>about this item: </h2>
-              <p>ReShoes OZWEEGO adalah inovasi terbaru dalam dunia sepatu yang menggabungkan gaya dan keberlanjutan. Dirancang dengan memperhatikan lingkungan, sepatu ini terbuat dari bahan-bahan daur ulang yang berkualitas tinggi, memberikan kontribusi positif terhadap pengurangan limbah plastik dan jejak karbon.</p> 
-              <p>Dengan desain yang modern dan nyaman, ReShoes OZWEEGO tidak hanya menawarkan penampilan yang trendi tetapi juga memberikan kenyamanan maksimal untuk aktivitas sehari-hari. Setiap pasang sepatu ini adalah pernyataan gaya yang ramah lingkungan.</p>
-                <li>Color: <span>Cream</span></li>
+              <p><strong>ReShoes Adi2000</strong> adalah sepatu yang menggabungkan desain retro dengan teknologi modern. Dengan bahan daur ulang berkualitas, sepatu ini menciptakan kombinasi sempurna antara gaya dan keberlanjutan.</p> 
+              <p>Desain yang ikonik dan nyaman memastikan bahwa ReShoes Adi2000 dapat digunakan di berbagai kesempatan, baik untuk gaya sehari-hari maupun acara khusus. Setiap detailnya dirancang untuk memberikan kenyamanan dan daya tarik visual yang luar biasa.</p>
+                <li>Color: <span>Brown Cream</span></li>
                 <li>Available: <span>in stock</span></li>
                 <li>Category: <span>Shoes Recyle</span></li>
                 <li>Shipping Area: <span>All over the world</span></li>
