--- a/HTML/product13.html
+++ b/HTML/product13.html
@@ -32,54 +32,54 @@
           <div class = "product-imgs">
             <div class = "img-display">
               <div class = "img-showcase">
-                <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                <img src = "../Assets/Images/ShoeImages/recycled-shoe13.avif" alt = "shoe image">
               </div>
             </div>
             <h2>Recommendations :</h2>
             <div class = "img-select">
               <div class = "img-item">
-                <a href = "product2.html" data-id = "2">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe2.avif" alt = "shoe image">
+                <a href = "product14.html" data-id = "14">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe14.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product3.html" data-id = "3">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe3.avif" alt = "shoe image">
+                <a href = "product15.html" data-id = "15">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe15.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product4.html" data-id = "4">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe4.avif" alt = "shoe image">
+                <a href = "product16.html" data-id = "16">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe16.avif" alt = "shoe image">
                 </a>
               </div>
               <div class = "img-item">
-                <a href = "product5.html" data-id = "5">
-                  <img src ="../Assets/Images/ShoeImages/recycled-shoe5.png" alt = "shoe image">
+                <a href = "product17.html" data-id = "17">
+                  <img src ="../Assets/Images/ShoeImages/recycled-shoe17.avif" alt = "shoe image">
                 </a>
               </div>
             </div>
           </div>
           <!-- card right -->
           <div class = "product-content">
-            <h2 class = "product-title">ReShoes OZWEEGO</h2>
+            <h2 class = "product-title">ReShoes Terrex 2</h2>
             <div class = "product-rating">
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
-              <i class = "fas fa-star-half-alt"></i>
-              <span>4.8(15)</span>
+              <i class = "fas fa-star"></i>
+              <span>4.6(53)</span>
             </div>
   
             <div class = "product-price">
-              <p class = "new-price">Price: <span>$499.00</span></p>
+              <p class = "new-price">Price: <span>$799.00</span></p>
             </div>
   
             <div class = "product-detail">
               <h2>about this item: </h2>
-              <p>ReShoes OZWEEGO adalah inovasi terbaru dalam dunia sepatu yang menggabungkan gaya dan keberlanjutan. Dirancang dengan memperhatikan lingkungan, sepatu ini terbuat dari bahan-bahan daur ulang yang berkualitas tinggi, memberikan kontribusi positif terhadap pengurangan limbah plastik dan jejak karbon.</p> 
-              <p>Dengan desain yang modern dan nyaman, ReShoes OZWEEGO tidak hanya menawarkan penampilan yang trendi tetapi juga memberikan kenyamanan maksimal untuk aktivitas sehari-hari. Setiap pasang sepatu ini adalah pernyataan gaya yang ramah lingkungan.</p>
-                <li>Color: <span>Cream</span></li>
+              <p><strong>ReShoes Terrex 2</strong> adalah sepatu trail yang dirancang untuk petualangan di alam bebas. Dengan kombinasi antara kenyamanan dan daya tahan, sepatu ini siap menemani setiap langkah Anda di berbagai medan.</p> 
+              <p>Dirancang untuk pelari dan penjelajah yang mencari sepatu yang dapat diandalkan, ReShoes Terrex 2 menggunakan bahan daur ulang berkualitas tinggi untuk mendukung keberlanjutan lingkungan. Desain sol luar yang agresif memberikan traksi yang optimal di tanah berbatu dan licin.</p>
+                <li>Color: <span>Black</span></li>
                 <li>Available: <span>in stock</span></li>
                 <li>Category: <span>Shoes Recyle</span></li>
                 <li>Shipping Area: <span>All over the world</span></li>
