--- a/HTML/product19.html
+++ b/HTML/product19.html
@@ -32,11 +32,21 @@
           <div class = "product-imgs">
             <div class = "img-display">
               <div class = "img-showcase">
-                <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                <img src = "../Assets/Images/ShoeImages/recycled-shoe19.avif" alt = "shoe image">
               </div>
             </div>
             <h2>Recommendations :</h2>
             <div class = "img-select">
+              <div class = "img-item">
+                <a href = "product20.html" data-id = "20">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe20.avif" alt = "shoe image">
+                </a>
+              </div>
+              <div class = "img-item">
+                <a href = "product1.html" data-id = "1">
+                  <img src = "../Assets/Images/ShoeImages/recycled-shoe1.avif" alt = "shoe image">
+                </a>
+              </div>
               <div class = "img-item">
                 <a href = "product2.html" data-id = "2">
                   <img src = "../Assets/Images/ShoeImages/recycled-shoe2.avif" alt = "shoe image">
@@ -44,31 +54,21 @@
               </div>
               <div class = "img-item">
                 <a href = "product3.html" data-id = "3">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe3.avif" alt = "shoe image">
-                </a>
-              </div>
-              <div class = "img-item">
-                <a href = "product4.html" data-id = "4">
-                  <img src = "../Assets/Images/ShoeImages/recycled-shoe4.avif" alt = "shoe image">
-                </a>
-              </div>
-              <div class = "img-item">
-                <a href = "product5.html" data-id = "5">
-                  <img src ="../Assets/Images/ShoeImages/recycled-shoe5.png" alt = "shoe image">
+                  <img src ="../Assets/Images/ShoeImages/recycled-shoe3.avif" alt = "shoe image">
                 </a>
               </div>
             </div>
           </div>
           <!-- card right -->
           <div class = "product-content">
-            <h2 class = "product-title">ReShoes OZWEEGO</h2>
+            <h2 class = "product-title">ReShoes Powerlift 5</h2>
             <div class = "product-rating">
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
               <i class = "fas fa-star"></i>
-              <i class = "fas fa-star-half-alt"></i>
-              <span>4.8(15)</span>
+              <i class = "fas fa-star"></i>
+              <span>4.9(69)</span>
             </div>
   
             <div class = "product-price">
@@ -77,9 +77,9 @@
   
             <div class = "product-detail">
               <h2>about this item: </h2>
-              <p>ReShoes OZWEEGO adalah inovasi terbaru dalam dunia sepatu yang menggabungkan gaya dan keberlanjutan. Dirancang dengan memperhatikan lingkungan, sepatu ini terbuat dari bahan-bahan daur ulang yang berkualitas tinggi, memberikan kontribusi positif terhadap pengurangan limbah plastik dan jejak karbon.</p> 
-              <p>Dengan desain yang modern dan nyaman, ReShoes OZWEEGO tidak hanya menawarkan penampilan yang trendi tetapi juga memberikan kenyamanan maksimal untuk aktivitas sehari-hari. Setiap pasang sepatu ini adalah pernyataan gaya yang ramah lingkungan.</p>
-                <li>Color: <span>Cream</span></li>
+              <p><strong>ReShoes Powerlift 5</strong> adalah sepatu yang dirancang khusus untuk angkat beban, menawarkan dukungan dan stabilitas maksimal. Dengan bahan daur ulang yang berkualitas, sepatu ini membantu mendukung keberlanjutan sambil memberikan performa yang optimal.</p> 
+              <p>Desain yang kokoh dan fungsional memastikan bahwa ReShoes Powerlift 5 dapat diandalkan selama sesi latihan yang intens. Setiap detail sepatu ini memberikan kenyamanan dan daya dukung yang diperlukan untuk performa terbaik.</p>
+                <li>Color: <span>White</span></li>
                 <li>Available: <span>in stock</span></li>
                 <li>Category: <span>Shoes Recyle</span></li>
                 <li>Shipping Area: <span>All over the world</span></li>
